Fixing main footer alignment and making it more preditable in its behaviour due to nesting without it requiring many workarounds etc. The screenfill class is partially broken due to these efforts and needs fixing.

--- a/cutler-skin.css
+++ b/cutler-skin.css
@@ -22,7 +22,7 @@ header .fullwidth {
     background-color: #fff;
 }
 
-footer.verticalorientation-bottom {
+footer .limitwidth-centered {
     box-shadow: none;
     background-color: transparent;   
 }
